--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.11.9",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.27.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
