--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
-    "sharp": "^0.27.0"
+    "sharp": "^0.27.0",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
