--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6"
   }
 }
